--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,24 @@
 spring.application.name=backend
+
+# Database
+spring.datasource.url=jdbc:mysql://localhost:3306/node_crud?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Server
+server.port=8080
+
+# JWT
+app.jwt.secret=replace-this-secret-with-env
+app.jwt.expiration-ms=86400000
+
+# Swagger
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
