Update UI: Change Books I Borrowed to Books Lent, fix sidebar height, and improve dashboard layout

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
 # Server
 server.port=8080
@@ -22,3 +23,8 @@ app.jwt.expiration-ms=86400000
 # Swagger
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
+
+# Request size limits (for base64 image uploads)
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
+server.tomcat.max-http-post-size=2MB
